--- a/SOL_vandal.html
+++ b/SOL_vandal.html
@@ -24,7 +24,9 @@
                  left: 0;
                  pointer-events: none;
                  z-index: 99999999; /* so that it stays on top of all other elements */
-                 
+                 @media(screen-width: 768px) {
+                    display: none;
+                }
              } 
          </style>
     </head>
