--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
                 left: 0;
                 pointer-events: none;
                 z-index: 99999999; /* so that it stays on top of all other elements */
-                
+                @media(screen-width: 768px) {
+                    display: none;
+                }
             } 
         </style>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
