--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             left: 0;
             pointer-events: none;
             z-index: 99999999; /* so that it stays on top of all other elements */
+            @media(screen-width: 768px) {
+                    display: none;
+                }
         } 
     </style>
 </head>
