--- a/EF_vandal.html
+++ b/EF_vandal.html
@@ -6,7 +6,7 @@
         <title>TBD website</title>
         <link rel="stylesheet" href="css/product.css">
         <link rel="stylesheet" href="boxicons.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,10 +24,12 @@
                  left: 0;
                  pointer-events: none;
                  z-index: 99999999; /* so that it stays on top of all other elements */
-                 @media(screen-width: 768px) {
+             } 
+             @media(max-width: 768px) {
+                .dot {
                     display: none;
                 }
-             } 
+            }
          </style>
     </head>
     <body>
@@ -75,7 +77,7 @@
                     <img src="images/Elderflame_vandal_0.png" alt="Elderflame Vandal">
                 </div>
                 <div class="product-text">
-                    <span class="product-category"><img src="images/Valorant-logo.png"></span>
+                    <span class="product-category"><img src="images/Valorant-logo.png" alt="Valorant Logo"></span>
                     <h3>ELDERFLAME VANDAL</h3>
                     <span class="product-price">$8999.98</span>
                     <p>The Elderflame Vandal in Valorant is a striking embodiment of futuristic mayhem, boasting a neon-infused design that pulsates with energy. Its sleek, angular frame and vibrant color scheme evoke a sense of digital chaos, perfectly encapsulating the high-tech warfare of Valorant's universe. <br/><br/>
