--- a/FS_vandal.html
+++ b/FS_vandal.html
@@ -24,10 +24,12 @@
                  left: 0;
                  pointer-events: none;
                  z-index: 99999999; /* so that it stays on top of all other elements */
-                 @media(screen-width: 768px) {
+             } 
+             @media(max-width: 768px) {
+                .dot {
                     display: none;
                 }
-             } 
+            }
          </style>
     </head>
     <body>
