--- a/landing.html
+++ b/landing.html
@@ -23,10 +23,12 @@
             left: 0;
             pointer-events: none;
             z-index: 99999999; /* so that it stays on top of all other elements */
-            @media(screen-width: 768px) {
+        } 
+        @media(max-width: 768px) {
+                .dot {
                     display: none;
                 }
-        } 
+            }
     </style>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -51,6 +53,7 @@
     <div class="dot"></div>
     <div class="dot"></div>
     <div class="dot"></div>
+  <section class="hero-header">
     <header>
         <a href="landing.html" class="logo">TBD</a>
         <div class="menu-toggle"></div>
@@ -77,6 +80,7 @@
         <a class="btn-hover" href="#cards">SHOP NOW</a>
         
     </section>
+  </section>
     <section class="marquee">
         <div class="marquee-container">
             <h1>VERY REAL PRODUCT·</h1>
