--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 pointer-events: none;
                 z-index: 99999999; /* so that it stays on top of all other elements */
             } 
-            @media(max-width: 768px) {
+            @media screen and (max-width: 1024px) {
                 .dot {
                     display: none;
                 }
