--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TBD</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TroubleShot</title>
+    <link rel="icon" href="images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="css/start-style.css">
     <style>
        .dot {
@@ -15,7 +18,7 @@
             pointer-events: none;
             z-index: 99999999; /* so that it stays on top of all other elements */
         } 
-        @media(max-width: 768px) {
+        @media screen and (max-width: 768px) {
                 .dot {
                     display: none;
                 }
