--- a/GP_vandal.html
+++ b/GP_vandal.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TBD</title>
+        <title>TroubleShot</title>
         <link rel="stylesheet" href="css/product.css">
         <link rel="stylesheet" href="boxicons.min.css">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="icon" href="images/favicon-32x32.png">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <script src="https://kit.fontawesome.com/4c572848eb.js" crossorigin="anonymous"></script>
@@ -25,7 +26,7 @@
                  pointer-events: none;
                  z-index: 99999999; /* so that it stays on top of all other elements */
              } 
-             @media(max-width: 768px) {
+             @media screen and (max-width: 768px) {
                 .dot {
                     display: none;
                 }
@@ -53,7 +54,7 @@
         <div class="dot"></div>
         <div class="dot"></div>
     <header>
-        <a href="landing.html" class="logo">TBD</a>
+        <a href="landing.html" class="logo"><img src="images/TroubleShot_transparent.png"></a>
         <div class="menu-toggle"></div>
         <nav>
             <ul>
